--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1> Yaman's CV</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+  <title>YAMAN'S CV</title>
+  </head>
+  <body>
+    <h1>Yaman's CV</h1>
+  </body>
+</html>
+
