--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>Yaman's CV</h1>
+    <h2>NAME:Yaman Matar</h2>
+    <h3>EMAIL:yaman.matar@campus.technion.ac.il</h3>
+    <h4>PlACE:Nahif-Haifa</h4>
+    <h5>PHONE NUMBER:0536217075</h5>
+    <h6>STUDIES: computer science</h6>
+    <h7>UNIVERSITY: Technion</h7>
   </body>
 </html>
 
