--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <h1>Yaman's CV</h1>
-    <h2>NAME:Yaman Matar</h2>
-    <h3>EMAIL:yaman.matar@campus.technion.ac.il</h3>
-    <h4>PlACE:Nahif-Haifa</h4>
-    <h5>PHONE NUMBER:0536217075</h5>
-    <h6>STUDIES: computer science</h6>
-    <h7>UNIVERSITY: Technion</h7>
+    <ul>
+      <li>NAME:Yaman Matar</li>
+      <li>EMAIL:yaman.matar@campus.technion.ac.il</li>
+      <li>PlACE:Nahif-Haifa</li>
+      <li>PHONE NUMBER:0536217075</li>
+      <li>STUDIES: computer science</li>
+      <li>UNIVERSITY: Technion</li>
+    </ul>
   </body>
 </html>
 
