--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en>
   <head>
+  <meta charset="UTF-8">
   <title>YAMAN'S CV</title>
   </head>
   <body>
+    <header>
+      <h1>Welcome to my cv page!</h1>
+      <h2>hope to get a call from you soon(:</h2>
+    </header>
     <h1>Yaman's CV</h1>
     <ul>
       <li>NAME:Yaman Matar</li>
