--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   <body>
     <header>
       <h1>Welcome to my cv page!</h1>
-      <h2>hope to get a call from you soon(:</h2>
+      <h2>hope to get a call from you soon :)</h2>
+      <nav>
+        <ul>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Studies">Studies</a></li>
+          <li><a href="#Self-learn">Self-learn</a></li>
+        </ul>
+      </nav>
     </header>
-    <h1>Yaman's CV</h1>
+    <main>
+    
     <ul>
       <li>NAME:Yaman Matar</li>
       <li>EMAIL:yaman.matar@campus.technion.ac.il</li>
@@ -18,6 +26,7 @@
       <li>STUDIES: computer science</li>
       <li>UNIVERSITY: Technion</li>
     </ul>
+    </main>
   </body>
 </html>
 
