--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </section>
     <section id="Studies">
     <h2>Studies</h2>
+    <article>
+    <h3>highschool</h3>
     <p>TO ADD ABOUT studies </p>
     </section>
     <section id="Self-learn">
