--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
     <h2>Studies</h2>
     <article>
     <h3>highschool</h3>
-    <p>TO ADD ABOUT studies </p>
-    </section>
+    <p>TO ADD ABOUT highschool </p>
+    </article>
+    <article>
+        <h3>university</h3>
+        <p>TO ADD ABOUT UNIVERISTY</p>
+    </article>
     <section id="Self-learn">
     <h2>Self-learn</h2>
     <p>TO ADD ABOUT self-learn </p>
