--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
       </nav>
     </header>
     <main>
-    <section id="Contact">
-      <h2>Contact</h2>
-      <ul>
-       <li>PHONE NUMBER:0536217075</li>
-        <li><strong>email:</strong> yaman.matar@campus.technion.ac.il</li>
-      </ul>
-    </section>
     <section id="About">
     <h2>About</h2>
     <p>TO ADD ABOUT MEEEEEEEE</p>
@@ -39,6 +32,7 @@
         <h3>university</h3>
         <p>TO ADD ABOUT UNIVERISTY</p>
     </article>
+    </section>
     <section id="Self-learn">
     <h2>Self-learn</h2>
     <p>TO ADD ABOUT self-learn </p>
@@ -53,6 +47,16 @@
       <li>UNIVERSITY: Technion</li>
     </ul>
     </main>
+    <footer>
+      <section id="Contact">
+      <h2>Contact</h2>
+     <address>
+       <p>Phone: <a href="tel:0536217075">053-621-7075</a></p>
+       <p>Email: <a href="mailto:yaman.matar@campus.technion.ac.il">yaman.matar@campus.technion.ac.il</a></p>
+     </address>
+    </section>
+      
+    </footer>
   </body>
 </html>
 
